<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_LinearActuator" Id="{39ffc351-0f6a-4f95-915f-ef1e54ac00b2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_LinearActuator EXTENDS FB_StateMachine  IMPLEMENTS I_StateMachine
VAR_INPUT
	bStartHoming : BOOL;
	bEnable : BOOL;
	bStartJog : BOOL;
	bStartHalt : BOOL;
	bStartStop : BOOL;
	
END_VAR
VAR
	eInnerState : E_LinearActuatorStates;
	fbHoming	: FB_LinearActuatorHoming;
	stAxis		: ST_LinearActuatorAxis;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[OuterLopSM();]]></ST>
    </Implementation>
    <Folder Name="Properties" Id="{67b8ba1b-0009-4384-9a87-257fa03c62cd}" />
    <Method Name="Disable" Id="{2c1f58b5-63e4-4bb8-9cf0-e61d1c2de641}">
      <Declaration><![CDATA[METHOD Disable : BOOL

VAR
	bChildBusy  : BOOL := FALSE;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbHoming(bActive:=FALSE);



IF fbHoming.Busy THEN
	bChildBusy := TRUE;
ELSIF fbHoming.bError THEN
	bChildBusy := TRUE;
	{warning 'TODO: trigger e-stop'}
	//	Stack trace and bError switching are reserved for inner loop
	fbHoming.ErrorAck:=TRUE;
END_IF



IF bChildBusy THEN
	Disable := FALSE;
ELSE
	Disable := TRUE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Property Name="ForceHoming" Id="{98c0a965-5128-4826-9949-f56fb5be7ee0}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY ForceHoming : BOOL]]></Declaration>
      <Get Name="Get" Id="{cdd72a7a-0011-4c9b-b322-e9b5b64592d1}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[ForceHoming := stAxis.bForceHoming;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{b4ef3e88-69c5-48c2-bef5-fae65f7e1168}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[stAxis.bForceHoming := ForceHoming;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="Homed" Id="{6cc8ab12-d7db-47a9-8164-075c35a1b665}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY Homed : BOOL]]></Declaration>
      <Get Name="Get" Id="{e14a833a-2065-4add-8a1d-e8399fbcf4b0}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[IF bActive THEN
	Homed := NOT fbHoming.HomingNeeded;
ELSE
	Homed :=  TRUE;;
END_IF ]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="InnerLoopSM" Id="{35781a01-7cb5-4d9c-9a89-3e2cef93d299}">
      <Declaration><![CDATA[METHOD InnerLoopSM : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// update all children FBs
fbHoming();

CASE CyclicInnerCase(TO_STRING(eInnerState)) OF
	E_LinearActuatorStates.Idle:
		IF bStartHoming THEN
			bStartHoming := FALSE;
			ChangeInnerState(E_LinearActuatorStates.Homing1);
		END_IF

	E_LinearActuatorStates.Homing1:
		IF fbHoming.Busy THEN
			// fbHoming should never be busy here 	
			sErrorDetails := 'fbHoming.Busy = TRUE';
			fbEventHandler(eNapID:=E_Event.UNABLE_TO_START_TASK,sMessage:=sErrorDetails);
			bError := TRUE;	
		ELSE
			IF fbHoming.bError THEN
				sErrorDetails := 'fbHoming.bReady=FALSE';
				fbEventHandler(eNapID:=E_Event.UNABLE_TO_START_TASK,sMessage:=sErrorDetails);
				bError := TRUE;
			ELSE
				fbHoming.bStart:=TRUE;
				ChangeInnerState(E_LinearActuatorStates.Homing2);
			END_IF
		END_IF
		
		
	E_LinearActuatorStates.Homing2:
		IF fbHoming.Busy THEN
			// Wait... fbStepper still busy 			
		ELSE
			IF fbHoming.bError THEN
				fbEventHandler(eNapID:=E_Event.TASK_FAILED,sTrace:=fbHoming.EventTrace);
				fbHoming.ErrorAck:=TRUE;
				bError := TRUE;
			ELSE
				IF Homed THEN
					fbEventHandler(eNapID:=E_Event.REQUEST_COMPLETED);
					ChangeInnerState(E_LinearActuatorStates.Idle);
				ELSE
					sErrorDetails := 'Homed=FALSE';
					fbEventHandler(eNapID:=E_Event.TASK_FAILED,sMessage:=sErrorDetails);
					bError := TRUE;
				END_IF
			END_IF
		END_IF
END_CASE
]]></ST>
      </Implementation>
    </Method>
    <Property Name="Position" Id="{db193924-7987-4438-959b-5229a7c4f28b}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY Position : LREAL]]></Declaration>
      <Get Name="Get" Id="{254a0463-4f21-4d81-9ebd-cd167752e5fd}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Position := stAxis.stAxisRef.NcToPlc.ActPos;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="ReadStatus" Id="{ed33bb7d-4920-4997-b14d-20e2decde0a3}">
      <Declaration><![CDATA[METHOD PUBLIC ReadStatus : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[stAxis.stAxisRef.ReadStatus();
{warning 'TODO: add logit to update stAxis.bAtTopPosition'}]]></ST>
      </Implementation>
    </Method>
    <Method Name="Reset" Id="{99379e88-438c-4b03-8a4e-ced232c5b93d}">
      <Declaration><![CDATA[METHOD Reset : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// reset variables specific to this FB 

// Reactivate children FBs
fbHoming.Active:=TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Setup" Id="{20854eb8-c628-493a-b732-db16588a4af4}">
      <Declaration><![CDATA[METHOD Setup : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[eStateMachineSourceID := eStateSourceID;
fbHoming(eStateSourceID := THIS^.eStateMachineSourceID +  E_LinearActuatorID_Offset.LinearActuatorHoming,
					aErrorLog:=THIS^.aErrorLog,
					nErrorLogIndex:=THIS^.nErrorLogIndex,
					stParentsAxis:=THIS^.stAxis);
					
SetInnerEnumeration(nStateEnum:=THIS^.eInnerState);]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_LinearActuator">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_LinearActuator.Disable">
      <LineId Id="8" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="20" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="35" Count="2" />
      <LineId Id="44" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="23" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="27" Count="0" />
    </LineIds>
    <LineIds Name="FB_LinearActuator.ForceHoming.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_LinearActuator.ForceHoming.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_LinearActuator.Homed.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="6" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_LinearActuator.InnerLoopSM">
      <LineId Id="83" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="86" Count="2" />
      <LineId Id="90" Count="5" />
      <LineId Id="164" Count="0" />
      <LineId Id="178" Count="2" />
      <LineId Id="165" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="171" Count="1" />
      <LineId Id="169" Count="0" />
      <LineId Id="173" Count="2" />
      <LineId Id="170" Count="0" />
      <LineId Id="166" Count="0" />
      <LineId Id="162" Count="1" />
      <LineId Id="107" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="145" Count="1" />
      <LineId Id="149" Count="1" />
      <LineId Id="147" Count="0" />
      <LineId Id="151" Count="0" />
      <LineId Id="153" Count="5" />
      <LineId Id="160" Count="0" />
      <LineId Id="152" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_LinearActuator.Position.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_LinearActuator.ReadStatus">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_LinearActuator.Reset">
      <LineId Id="10" Count="0" />
      <LineId Id="22" Count="1" />
      <LineId Id="21" Count="0" />
    </LineIds>
    <LineIds Name="FB_LinearActuator.Setup">
      <LineId Id="30" Count="0" />
      <LineId Id="42" Count="1" />
      <LineId Id="33" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="28" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>